@@ -1,0 +1,11 @@
+#!/bin/bash
+[ -x ./feh ] && {
+FEH="./feh"
+} || {
+FEH="feh"
+}
+echo ""
+echo "This should invoke a fullscreen slideshow"
+echo ""
+$FEH $1 --caption-path captions testimages
+echo ""
