@@ -38,5 +38,6 @@ void *_erealloc(void *ptr, size_t n);
 char *estrjoin(const char *separator, ...);
 char *stroflen(char, int);
 char *feh_unique_filename(char *path, char *basename);
+char *ereadfile(char *path);
 
 #endif
